# basicPotential

./: .clang-tidy  CMakeLists.txt  MultipoleField.cc  MultipoleField.hh  MultipolePlot.cc  MultipolePlot.hh  PointCharge.cc  PointCharge.hh  README.md  main.cpp  main.qml
inputFiles/: pointChargeGenerator.py  pointCharges.txt  pointChargesAligned.txt
qcustomplot/: CMakeLists.txt
qcustomplot/src/: qcustomplot.cpp
